# aiohttp-fast-zlib

./: .all-contributorsrc  .copier-answers.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  poetry-upgrade.yml
src/aiohttp_fast_zlib/: __init__.py
tests/: test_init.py  test_main.py
